@startuml
' 博客系统数据库ER图
' 基于Spring Boot和Vue 3的博客系统

' 系统表
entity "sys_login_log" as SysLoginLog {
  * login_log_id : bigint [PK]
  --
  user_name : varchar(50)
  ip : varchar(50)
  address : varchar(50)
  browser : varchar(50)
  os : varchar(50)
  type : tinyint(1)
  state : tinyint(1)
  message : longtext
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint(1)
}

entity "sys_permission" as SysPermission {
  * permission_id : bigint UNSIGNED [PK]
  --
  permission_desc : varchar(50)
  permission_key : varchar(255)
  menu_id : bigint
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint
}

entity "sys_role" as SysRole {
  * role_id : bigint UNSIGNED [PK]
  --
  role_name : varchar(100)
  role_key : varchar(10)
  status : tinyint
  order_num : bigint
  remark : varchar(255)
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint
}

entity "sys_role_permission" as SysRolePermission {
  * role_permission_id : bigint [PK]
  --
  role_id : bigint
  permission_id : bigint
}

entity "sys_user" as SysUser {
  * user_id : bigint UNSIGNED [PK]
  --
  nickname : varchar(50)
  username : varchar(50)
  gender : tinyint(1)
  password : varchar(100)
  avatar : varchar(255)
  intro : varchar(100)
  email : varchar(50)
  register_ip : varchar(100)
  register_type : tinyint
  register_address : varchar(50)
  login_ip : varchar(100)
  login_address : varchar(50)
  login_type : tinyint
  login_time : datetime
  is_disable : tinyint(1)
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint(1)
}

entity "sys_user_role" as SysUserRole {
  * user_role_id : int [PK]
  --
  user_id : int
  role_id : varchar(20)
}

entity "sys_website_info" as SysWebsiteInfo {
  * id : bigint unsigned [PK]
  --
  webmaster_avatar : varchar(250)
  webmaster_name : varchar(50)
  webmaster_copy : varchar(100)
  webmaster_profile_background : varchar(255)
  gitee_link : varchar(100)
  github_link : varchar(100)
  website_name : varchar(50)
  header_notification : varchar(150)
  sidebar_announcement : varchar(255)
  record_info : varchar(255)
  start_time : datetime
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint(1)
}

' 业务表
entity "t_article" as TArticle {
  * article_id : bigint UNSIGNED [PK]
  --
  user_id : bigint
  category_id : bigint
  article_title : varchar(50)
  article_content : longtext
  article_type : tinyint
  status : tinyint
  visited_count : bigint unsigned
  is_top : tinyint
  create_time : datetime
  update_time : datetime
  article_cover : varchar(200)
  is_deleted : tinyint(1)
}

entity "t_article_tag" as TArticleTag {
  * article_tag_id : bigint unsigned [PK]
  --
  article_id : bigint unsigned
  tag_id : bigint unsigned
  create_time : datetime
  is_deleted : tinyint
}

entity "t_banner" as TBanner {
  * banner_id : bigint unsigned [PK]
  --
  path : varchar(255)
  size : bigint
  type : varchar(55)
  user_id : bigint
  order : int
  create_time : datetime
}

entity "t_category" as TCategory {
  * category_id : bigint unsigned [PK]
  --
  category_name : varchar(20)
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint(1)
}

entity "t_comment" as TComment {
  * comment_id : bigint [PK]
  --
  type : tinyint(1)
  type_id : bigint
  parent_id : bigint
  reply_id : bigint
  comment_content : text
  comment_user_id : bigint
  reply_user_id : bigint
  is_check : tinyint(1)
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint(1)
}

entity "t_leave_word" as TLeaveWord {
  * leave_word_id : bigint [PK]
  --
  user_id : bigint
  content : longtext
  is_check : tinyint(1)
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint(1)
}

entity "t_like" as TLike {
  * like_id : bigint [PK]
  --
  user_id : bigint
  type : tinyint
  type_id : bigint
  create_time : datetime
  update_time : datetime
}

entity "t_favorite" as TFavorite {
  * favorite_id : bigint [PK]
  --
  user_id : bigint
  type : int
  type_id : bigint
  is_check : int
  create_time : datetime
}

entity "t_tag" as TTag {
  * tag_id : bigint UNSIGNED [PK]
  --
  tag_name : varchar(20)
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint
}

entity "t_tree_hole" as TTreeHole {
  * tree_hole_id : bigint [PK]
  --
  user_id : bigint
  content : varchar(100)
  is_check : tinyint(1)
  create_time : datetime
  update_time : datetime
  is_deleted : tinyint(1)
}

' 关系定义
' 用户与角色：多对多
SysUser ||--o{ SysUserRole : has
SysRole ||--o{ SysUserRole : has

' 角色与权限：多对多
SysRole ||--o{ SysRolePermission : has
SysPermission ||--o{ SysRolePermission : has

' 用户与文章：一对多
SysUser ||--o{ TArticle : writes

' 文章与分类：一对多
TCategory ||--o{ TArticle : contains

' 文章与标签：多对多
TArticle ||--o{ TArticleTag : has
TTag ||--o{ TArticleTag : has

' 用户与评论：一对多
SysUser ||--o{ TComment : writes

' 文章与评论：一对多（当type=1时）
TArticle ||--o{ TComment : receives

' 用户与点赞：一对多
SysUser ||--o{ TLike : gives

' 用户与收藏：一对多
SysUser ||--o{ TFavorite : collects

' 用户与留言：一对多
SysUser ||--o{ TLeaveWord : writes

' 用户与树洞：一对多
SysUser ||--o{ TTreeHole : writes

' 用户与轮播图：一对多
SysUser ||--o{ TBanner : uploads

' 登录日志与用户：多对一
SysLoginLog }o--|| SysUser : belongs_to

@enduml